fix: top level array type parsing
