# typescript/src/models/ImagesGet200ResponseImagesInner.ts
@@ -1,0 +1,113 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Hey Bible App API
+ * Public API for accessing Bible app data
+ *
+ * The version of the OpenAPI document: 1.0.3
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface ImagesGet200ResponseImagesInner
+ */
+export interface ImagesGet200ResponseImagesInner {
+    /**
+     * 
+     * @type {number}
+     * @memberof ImagesGet200ResponseImagesInner
+     */
+    id?: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof ImagesGet200ResponseImagesInner
+     */
+    verseId?: number;
+    /**
+     * 
+     * @type {string}
+     * @memberof ImagesGet200ResponseImagesInner
+     */
+    userId?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof ImagesGet200ResponseImagesInner
+     */
+    storagePath?: string;
+    /**
+     * 
+     * @type {Date}
+     * @memberof ImagesGet200ResponseImagesInner
+     */
+    createdAt?: Date;
+    /**
+     * 
+     * @type {string}
+     * @memberof ImagesGet200ResponseImagesInner
+     */
+    prompt?: string | null;
+    /**
+     * 
+     * @type {string}
+     * @memberof ImagesGet200ResponseImagesInner
+     */
+    size?: string | null;
+}
+
+/**
+ * Check if a given object implements the ImagesGet200ResponseImagesInner interface.
+ */
+export function instanceOfImagesGet200ResponseImagesInner(value: object): value is ImagesGet200ResponseImagesInner {
+    return true;
+}
+
+export function ImagesGet200ResponseImagesInnerFromJSON(json: any): ImagesGet200ResponseImagesInner {
+    return ImagesGet200ResponseImagesInnerFromJSONTyped(json, false);
+}
+
+export function ImagesGet200ResponseImagesInnerFromJSONTyped(json: any, ignoreDiscriminator: boolean): ImagesGet200ResponseImagesInner {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'id': json['id'] == null ? undefined : json['id'],
+        'verseId': json['verse_id'] == null ? undefined : json['verse_id'],
+        'userId': json['user_id'] == null ? undefined : json['user_id'],
+        'storagePath': json['storage_path'] == null ? undefined : json['storage_path'],
+        'createdAt': json['created_at'] == null ? undefined : (new Date(json['created_at'])),
+        'prompt': json['prompt'] == null ? undefined : json['prompt'],
+        'size': json['size'] == null ? undefined : json['size'],
+    };
+}
+
+export function ImagesGet200ResponseImagesInnerToJSON(json: any): ImagesGet200ResponseImagesInner {
+    return ImagesGet200ResponseImagesInnerToJSONTyped(json, false);
+}
+
+export function ImagesGet200ResponseImagesInnerToJSONTyped(value?: ImagesGet200ResponseImagesInner | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'id': value['id'],
+        'verse_id': value['verseId'],
+        'user_id': value['userId'],
+        'storage_path': value['storagePath'],
+        'created_at': value['createdAt'] == null ? undefined : ((value['createdAt']).toISOString()),
+        'prompt': value['prompt'],
+        'size': value['size'],
+    };
+}
+
