# typescript/src/models/NotesGet200ResponseNotesInner.ts
@@ -1,0 +1,105 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Hey Bible App API
+ * Public API for accessing Bible app data
+ *
+ * The version of the OpenAPI document: 1.0.3
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface NotesGet200ResponseNotesInner
+ */
+export interface NotesGet200ResponseNotesInner {
+    /**
+     * 
+     * @type {number}
+     * @memberof NotesGet200ResponseNotesInner
+     */
+    id?: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof NotesGet200ResponseNotesInner
+     */
+    verseId?: number;
+    /**
+     * 
+     * @type {string}
+     * @memberof NotesGet200ResponseNotesInner
+     */
+    content?: string;
+    /**
+     * 
+     * @type {Date}
+     * @memberof NotesGet200ResponseNotesInner
+     */
+    createdAt?: Date | null;
+    /**
+     * 
+     * @type {Date}
+     * @memberof NotesGet200ResponseNotesInner
+     */
+    lastModified?: Date | null;
+    /**
+     * 
+     * @type {string}
+     * @memberof NotesGet200ResponseNotesInner
+     */
+    userId?: string;
+}
+
+/**
+ * Check if a given object implements the NotesGet200ResponseNotesInner interface.
+ */
+export function instanceOfNotesGet200ResponseNotesInner(value: object): value is NotesGet200ResponseNotesInner {
+    return true;
+}
+
+export function NotesGet200ResponseNotesInnerFromJSON(json: any): NotesGet200ResponseNotesInner {
+    return NotesGet200ResponseNotesInnerFromJSONTyped(json, false);
+}
+
+export function NotesGet200ResponseNotesInnerFromJSONTyped(json: any, ignoreDiscriminator: boolean): NotesGet200ResponseNotesInner {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'id': json['id'] == null ? undefined : json['id'],
+        'verseId': json['verse_id'] == null ? undefined : json['verse_id'],
+        'content': json['content'] == null ? undefined : json['content'],
+        'createdAt': json['created_at'] == null ? undefined : (new Date(json['created_at'])),
+        'lastModified': json['last_modified'] == null ? undefined : (new Date(json['last_modified'])),
+        'userId': json['user_id'] == null ? undefined : json['user_id'],
+    };
+}
+
+export function NotesGet200ResponseNotesInnerToJSON(json: any): NotesGet200ResponseNotesInner {
+    return NotesGet200ResponseNotesInnerToJSONTyped(json, false);
+}
+
+export function NotesGet200ResponseNotesInnerToJSONTyped(value?: NotesGet200ResponseNotesInner | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'id': value['id'],
+        'verse_id': value['verseId'],
+        'content': value['content'],
+        'created_at': value['createdAt'] === null ? null : ((value['createdAt'] as any)?.toISOString()),
+        'last_modified': value['lastModified'] === null ? null : ((value['lastModified'] as any)?.toISOString()),
+        'user_id': value['userId'],
+    };
+}
+
