# typescript/src/models/VersesGet200ResponseVersesInner.ts
@@ -1,0 +1,176 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Hey Bible App API
+ * Public API for accessing Bible app data
+ *
+ * The version of the OpenAPI document: 1.0.3
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+import type { NotesGet200ResponseNotesInner } from './NotesGet200ResponseNotesInner';
+import {
+    NotesGet200ResponseNotesInnerFromJSON,
+    NotesGet200ResponseNotesInnerFromJSONTyped,
+    NotesGet200ResponseNotesInnerToJSON,
+    NotesGet200ResponseNotesInnerToJSONTyped,
+} from './NotesGet200ResponseNotesInner';
+import type { VersesGet200ResponseVersesInnerImagesInner } from './VersesGet200ResponseVersesInnerImagesInner';
+import {
+    VersesGet200ResponseVersesInnerImagesInnerFromJSON,
+    VersesGet200ResponseVersesInnerImagesInnerFromJSONTyped,
+    VersesGet200ResponseVersesInnerImagesInnerToJSON,
+    VersesGet200ResponseVersesInnerImagesInnerToJSONTyped,
+} from './VersesGet200ResponseVersesInnerImagesInner';
+
+/**
+ * 
+ * @export
+ * @interface VersesGet200ResponseVersesInner
+ */
+export interface VersesGet200ResponseVersesInner {
+    /**
+     * 
+     * @type {number}
+     * @memberof VersesGet200ResponseVersesInner
+     */
+    id?: number;
+    /**
+     * 
+     * @type {string}
+     * @memberof VersesGet200ResponseVersesInner
+     */
+    userId?: string;
+    /**
+     * 
+     * @type {Date}
+     * @memberof VersesGet200ResponseVersesInner
+     */
+    createdAt?: Date;
+    /**
+     * 
+     * @type {string}
+     * @memberof VersesGet200ResponseVersesInner
+     */
+    book?: string;
+    /**
+     * 
+     * @type {number}
+     * @memberof VersesGet200ResponseVersesInner
+     */
+    chapter?: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof VersesGet200ResponseVersesInner
+     */
+    startVerse?: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof VersesGet200ResponseVersesInner
+     */
+    endVerse?: number;
+    /**
+     * 
+     * @type {boolean}
+     * @memberof VersesGet200ResponseVersesInner
+     */
+    isFavorite?: boolean;
+    /**
+     * 
+     * @type {Date}
+     * @memberof VersesGet200ResponseVersesInner
+     */
+    lastUpdated?: Date;
+    /**
+     * 
+     * @type {string}
+     * @memberof VersesGet200ResponseVersesInner
+     */
+    content?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof VersesGet200ResponseVersesInner
+     */
+    bibleId?: string;
+    /**
+     * 
+     * @type {Array<NotesGet200ResponseNotesInner>}
+     * @memberof VersesGet200ResponseVersesInner
+     */
+    notes?: Array<NotesGet200ResponseNotesInner>;
+    /**
+     * 
+     * @type {Array<VersesGet200ResponseVersesInnerImagesInner>}
+     * @memberof VersesGet200ResponseVersesInner
+     */
+    images?: Array<VersesGet200ResponseVersesInnerImagesInner>;
+}
+
+/**
+ * Check if a given object implements the VersesGet200ResponseVersesInner interface.
+ */
+export function instanceOfVersesGet200ResponseVersesInner(value: object): value is VersesGet200ResponseVersesInner {
+    return true;
+}
+
+export function VersesGet200ResponseVersesInnerFromJSON(json: any): VersesGet200ResponseVersesInner {
+    return VersesGet200ResponseVersesInnerFromJSONTyped(json, false);
+}
+
+export function VersesGet200ResponseVersesInnerFromJSONTyped(json: any, ignoreDiscriminator: boolean): VersesGet200ResponseVersesInner {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'id': json['id'] == null ? undefined : json['id'],
+        'userId': json['user_id'] == null ? undefined : json['user_id'],
+        'createdAt': json['created_at'] == null ? undefined : (new Date(json['created_at'])),
+        'book': json['book'] == null ? undefined : json['book'],
+        'chapter': json['chapter'] == null ? undefined : json['chapter'],
+        'startVerse': json['start_verse'] == null ? undefined : json['start_verse'],
+        'endVerse': json['end_verse'] == null ? undefined : json['end_verse'],
+        'isFavorite': json['is_favorite'] == null ? undefined : json['is_favorite'],
+        'lastUpdated': json['last_updated'] == null ? undefined : (new Date(json['last_updated'])),
+        'content': json['content'] == null ? undefined : json['content'],
+        'bibleId': json['bible_id'] == null ? undefined : json['bible_id'],
+        'notes': json['notes'] == null ? undefined : ((json['notes'] as Array<any>).map(NotesGet200ResponseNotesInnerFromJSON)),
+        'images': json['images'] == null ? undefined : ((json['images'] as Array<any>).map(VersesGet200ResponseVersesInnerImagesInnerFromJSON)),
+    };
+}
+
+export function VersesGet200ResponseVersesInnerToJSON(json: any): VersesGet200ResponseVersesInner {
+    return VersesGet200ResponseVersesInnerToJSONTyped(json, false);
+}
+
+export function VersesGet200ResponseVersesInnerToJSONTyped(value?: VersesGet200ResponseVersesInner | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'id': value['id'],
+        'user_id': value['userId'],
+        'created_at': value['createdAt'] == null ? undefined : ((value['createdAt']).toISOString()),
+        'book': value['book'],
+        'chapter': value['chapter'],
+        'start_verse': value['startVerse'],
+        'end_verse': value['endVerse'],
+        'is_favorite': value['isFavorite'],
+        'last_updated': value['lastUpdated'] == null ? undefined : ((value['lastUpdated']).toISOString()),
+        'content': value['content'],
+        'bible_id': value['bibleId'],
+        'notes': value['notes'] == null ? undefined : ((value['notes'] as Array<any>).map(NotesGet200ResponseNotesInnerToJSON)),
+        'images': value['images'] == null ? undefined : ((value['images'] as Array<any>).map(VersesGet200ResponseVersesInnerImagesInnerToJSON)),
+    };
+}
+
