# typescript/src/models/VersesGet200ResponseVersesInnerImagesInner.ts
@@ -1,0 +1,113 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Hey Bible App API
+ * Public API for accessing Bible app data
+ *
+ * The version of the OpenAPI document: 1.0.3
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface VersesGet200ResponseVersesInnerImagesInner
+ */
+export interface VersesGet200ResponseVersesInnerImagesInner {
+    /**
+     * 
+     * @type {number}
+     * @memberof VersesGet200ResponseVersesInnerImagesInner
+     */
+    id?: number;
+    /**
+     * 
+     * @type {string}
+     * @memberof VersesGet200ResponseVersesInnerImagesInner
+     */
+    size?: string | null;
+    /**
+     * 
+     * @type {string}
+     * @memberof VersesGet200ResponseVersesInnerImagesInner
+     */
+    prompt?: string | null;
+    /**
+     * 
+     * @type {string}
+     * @memberof VersesGet200ResponseVersesInnerImagesInner
+     */
+    userId?: string;
+    /**
+     * 
+     * @type {number}
+     * @memberof VersesGet200ResponseVersesInnerImagesInner
+     */
+    verseId?: number;
+    /**
+     * 
+     * @type {Date}
+     * @memberof VersesGet200ResponseVersesInnerImagesInner
+     */
+    createdAt?: Date;
+    /**
+     * 
+     * @type {string}
+     * @memberof VersesGet200ResponseVersesInnerImagesInner
+     */
+    storagePath?: string;
+}
+
+/**
+ * Check if a given object implements the VersesGet200ResponseVersesInnerImagesInner interface.
+ */
+export function instanceOfVersesGet200ResponseVersesInnerImagesInner(value: object): value is VersesGet200ResponseVersesInnerImagesInner {
+    return true;
+}
+
+export function VersesGet200ResponseVersesInnerImagesInnerFromJSON(json: any): VersesGet200ResponseVersesInnerImagesInner {
+    return VersesGet200ResponseVersesInnerImagesInnerFromJSONTyped(json, false);
+}
+
+export function VersesGet200ResponseVersesInnerImagesInnerFromJSONTyped(json: any, ignoreDiscriminator: boolean): VersesGet200ResponseVersesInnerImagesInner {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'id': json['id'] == null ? undefined : json['id'],
+        'size': json['size'] == null ? undefined : json['size'],
+        'prompt': json['prompt'] == null ? undefined : json['prompt'],
+        'userId': json['user_id'] == null ? undefined : json['user_id'],
+        'verseId': json['verse_id'] == null ? undefined : json['verse_id'],
+        'createdAt': json['created_at'] == null ? undefined : (new Date(json['created_at'])),
+        'storagePath': json['storage_path'] == null ? undefined : json['storage_path'],
+    };
+}
+
+export function VersesGet200ResponseVersesInnerImagesInnerToJSON(json: any): VersesGet200ResponseVersesInnerImagesInner {
+    return VersesGet200ResponseVersesInnerImagesInnerToJSONTyped(json, false);
+}
+
+export function VersesGet200ResponseVersesInnerImagesInnerToJSONTyped(value?: VersesGet200ResponseVersesInnerImagesInner | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'id': value['id'],
+        'size': value['size'],
+        'prompt': value['prompt'],
+        'user_id': value['userId'],
+        'verse_id': value['verseId'],
+        'created_at': value['createdAt'] == null ? undefined : ((value['createdAt']).toISOString()),
+        'storage_path': value['storagePath'],
+    };
+}
+
